Remove unneeded browser user stuff, fix some bugs
Bugs fixed: ancestor category path, login button invisible.

--- a/client/app/topbar/topbar.styl
+++ b/client/app/topbar/topbar.styl
@@ -315,7 +315,6 @@ html:not(.dw-react-started):not(.es-forum)  // (skip forum because it renders th
       box-sizing: content-box;
       color: hsl(0, 0%, 23%);
       border: none;
-      background: none;
       padding: $topbarButtonPaddingTop 8px 7px 8px;
 
       &.dw-scrollback
